@@ -1,5 +1,7 @@
 package net.minecraft.entity.monster;
 
+import javax.annotation.Nullable;
+import net.minecraft.entity.EntityLiving;
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.SharedMonsterAttributes;
 import net.minecraft.entity.ai.EntityAIBase;
@@ -7,17 +9,25 @@ import net.minecraft.entity.ai.EntityAIHurtByTarget;
 import net.minecraft.entity.ai.EntityAILookIdle;
 import net.minecraft.entity.ai.EntityAIMoveTowardsRestriction;
 import net.minecraft.entity.ai.EntityAINearestAttackableTarget;
-import net.minecraft.entity.ai.EntityAIWander;
+import net.minecraft.entity.ai.EntityAIWanderAvoidWater;
 import net.minecraft.entity.ai.EntityAIWatchClosest;
+import net.minecraft.entity.ai.attributes.IAttributeInstance;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.entity.projectile.EntitySmallFireball;
-import net.minecraft.init.Items;
-import net.minecraft.item.Item;
-import net.minecraft.util.BlockPos;
+import net.minecraft.init.SoundEvents;
+import net.minecraft.network.datasync.DataParameter;
+import net.minecraft.network.datasync.DataSerializers;
+import net.minecraft.network.datasync.EntityDataManager;
+import net.minecraft.pathfinding.PathNodeType;
 import net.minecraft.util.DamageSource;
 import net.minecraft.util.EnumParticleTypes;
-import net.minecraft.util.MathHelper;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.SoundEvent;
+import net.minecraft.util.datafix.DataFixer;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.MathHelper;
 import net.minecraft.world.World;
+import net.minecraft.world.storage.loot.LootTableList;
 
 public class EntityBlaze extends EntityMob
 {
@@ -26,60 +36,65 @@ public class EntityBlaze extends EntityMob
 
     /** ticks until heightOffset is randomized */
     private int heightOffsetUpdateTime;
+    private static final DataParameter<Byte> ON_FIRE = EntityDataManager.createKey(EntityBlaze.class, DataSerializers.BYTE);
 
     public EntityBlaze(World worldIn)
     {
         super(worldIn);
+        this.setPathPriority(PathNodeType.WATER, -1.0F);
+        this.setPathPriority(PathNodeType.LAVA, 8.0F);
+        this.setPathPriority(PathNodeType.DANGER_FIRE, 0.0F);
+        this.setPathPriority(PathNodeType.DAMAGE_FIRE, 0.0F);
         this.isImmuneToFire = true;
         this.experienceValue = 10;
+    }
+
+    public static void registerFixesBlaze(DataFixer fixer)
+    {
+        EntityLiving.registerFixesMob(fixer, EntityBlaze.class);
+    }
+
+    protected void initEntityAI()
+    {
         this.tasks.addTask(4, new EntityBlaze.AIFireballAttack(this));
         this.tasks.addTask(5, new EntityAIMoveTowardsRestriction(this, 1.0D));
-        this.tasks.addTask(7, new EntityAIWander(this, 1.0D));
+        this.tasks.addTask(7, new EntityAIWanderAvoidWater(this, 1.0D, 0.0F));
         this.tasks.addTask(8, new EntityAIWatchClosest(this, EntityPlayer.class, 8.0F));
         this.tasks.addTask(8, new EntityAILookIdle(this));
-        this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, true, new Class[0]));
+        this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, true));
         this.targetTasks.addTask(2, new EntityAINearestAttackableTarget(this, EntityPlayer.class, true));
     }
 
     protected void applyEntityAttributes()
     {
         super.applyEntityAttributes();
-        this.getEntityAttribute(SharedMonsterAttributes.attackDamage).setBaseValue(6.0D);
-        this.getEntityAttribute(SharedMonsterAttributes.movementSpeed).setBaseValue(0.23000000417232513D);
-        this.getEntityAttribute(SharedMonsterAttributes.followRange).setBaseValue(48.0D);
+        this.getEntityAttribute(SharedMonsterAttributes.ATTACK_DAMAGE).setBaseValue(6.0D);
+        this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED).setBaseValue(0.23000000417232513D);
+        this.getEntityAttribute(SharedMonsterAttributes.FOLLOW_RANGE).setBaseValue(48.0D);
     }
 
     protected void entityInit()
     {
         super.entityInit();
-        this.dataWatcher.addObject(16, new Byte((byte)0));
+        this.dataManager.register(ON_FIRE, Byte.valueOf((byte)0));
     }
 
-    /**
-     * Returns the sound this mob makes while it's alive.
-     */
-    protected String getLivingSound()
+    protected SoundEvent getAmbientSound()
     {
-        return "mob.blaze.breathe";
+        return SoundEvents.ENTITY_BLAZE_AMBIENT;
     }
 
-    /**
-     * Returns the sound this mob makes when it is hurt.
-     */
-    protected String getHurtSound()
+    protected SoundEvent getHurtSound(DamageSource p_184601_1_)
     {
-        return "mob.blaze.hit";
+        return SoundEvents.ENTITY_BLAZE_HURT;
     }
 
-    /**
-     * Returns the sound this mob makes on death.
-     */
-    protected String getDeathSound()
+    protected SoundEvent getDeathSound()
     {
-        return "mob.blaze.death";
+        return SoundEvents.ENTITY_BLAZE_DEATH;
     }
 
-    public int getBrightnessForRender(float partialTicks)
+    public int getBrightnessForRender()
     {
         return 15728880;
     }
@@ -87,7 +102,7 @@ public class EntityBlaze extends EntityMob
     /**
      * Gets how bright this entity is.
      */
-    public float getBrightness(float partialTicks)
+    public float getBrightness()
     {
         return 1.0F;
     }
@@ -103,16 +118,16 @@ public class EntityBlaze extends EntityMob
             this.motionY *= 0.6D;
         }
 
-        if (this.worldObj.isRemote)
+        if (this.world.isRemote)
         {
             if (this.rand.nextInt(24) == 0 && !this.isSilent())
             {
-                this.worldObj.playSound(this.posX + 0.5D, this.posY + 0.5D, this.posZ + 0.5D, "fire.fire", 1.0F + this.rand.nextFloat(), this.rand.nextFloat() * 0.7F + 0.3F, false);
+                this.world.playSound(this.posX + 0.5D, this.posY + 0.5D, this.posZ + 0.5D, SoundEvents.ENTITY_BLAZE_BURN, this.getSoundCategory(), 1.0F + this.rand.nextFloat(), this.rand.nextFloat() * 0.7F + 0.3F, false);
             }
 
             for (int i = 0; i < 2; ++i)
             {
-                this.worldObj.spawnParticle(EnumParticleTypes.SMOKE_LARGE, this.posX + (this.rand.nextDouble() - 0.5D) * (double)this.width, this.posY + this.rand.nextDouble() * (double)this.height, this.posZ + (this.rand.nextDouble() - 0.5D) * (double)this.width, 0.0D, 0.0D, 0.0D, new int[0]);
+                this.world.spawnParticle(EnumParticleTypes.SMOKE_LARGE, this.posX + (this.rand.nextDouble() - 0.5D) * (double)this.width, this.posY + this.rand.nextDouble() * (double)this.height, this.posZ + (this.rand.nextDouble() - 0.5D) * (double)this.width, 0.0D, 0.0D, 0.0D);
             }
         }
 
@@ -149,43 +164,28 @@ public class EntityBlaze extends EntityMob
     {
     }
 
-    protected Item getDropItem()
-    {
-        return Items.blaze_rod;
-    }
-
     /**
      * Returns true if the entity is on fire. Used by render to add the fire effect on rendering.
      */
     public boolean isBurning()
     {
-        return this.func_70845_n();
+        return this.isCharged();
     }
 
-    /**
-     * Drop 0-2 items of this living's type
-     */
-    protected void dropFewItems(boolean p_70628_1_, int p_70628_2_)
+    @Nullable
+    protected ResourceLocation getLootTable()
     {
-        if (p_70628_1_)
-        {
-            int i = this.rand.nextInt(2 + p_70628_2_);
-
-            for (int j = 0; j < i; ++j)
-            {
-                this.dropItem(Items.blaze_rod, 1);
-            }
-        }
+        return LootTableList.ENTITIES_BLAZE;
     }
 
-    public boolean func_70845_n()
+    public boolean isCharged()
     {
-        return (this.dataWatcher.getWatchableObjectByte(16) & 1) != 0;
+        return (this.dataManager.get(ON_FIRE).byteValue() & 1) != 0;
     }
 
     public void setOnFire(boolean onFire)
     {
-        byte b0 = this.dataWatcher.getWatchableObjectByte(16);
+        byte b0 = this.dataManager.get(ON_FIRE).byteValue();
 
         if (onFire)
         {
@@ -196,7 +196,7 @@ public class EntityBlaze extends EntityMob
             b0 = (byte)(b0 & -2);
         }
 
-        this.dataWatcher.updateObject(16, Byte.valueOf(b0));
+        this.dataManager.set(ON_FIRE, Byte.valueOf(b0));
     }
 
     /**
@@ -209,13 +209,13 @@ public class EntityBlaze extends EntityMob
 
     static class AIFireballAttack extends EntityAIBase
     {
-        private EntityBlaze blaze;
-        private int field_179467_b;
-        private int field_179468_c;
+        private final EntityBlaze blaze;
+        private int attackStep;
+        private int attackTime;
 
-        public AIFireballAttack(EntityBlaze p_i45846_1_)
+        public AIFireballAttack(EntityBlaze blazeIn)
         {
-            this.blaze = p_i45846_1_;
+            this.blaze = blazeIn;
             this.setMutexBits(3);
         }
 
@@ -227,7 +227,7 @@ public class EntityBlaze extends EntityMob
 
         public void startExecuting()
         {
-            this.field_179467_b = 0;
+            this.attackStep = 0;
         }
 
         public void resetTask()
@@ -237,56 +237,56 @@ public class EntityBlaze extends EntityMob
 
         public void updateTask()
         {
-            --this.field_179468_c;
+            --this.attackTime;
             EntityLivingBase entitylivingbase = this.blaze.getAttackTarget();
             double d0 = this.blaze.getDistanceSqToEntity(entitylivingbase);
 
             if (d0 < 4.0D)
             {
-                if (this.field_179468_c <= 0)
+                if (this.attackTime <= 0)
                 {
-                    this.field_179468_c = 20;
+                    this.attackTime = 20;
                     this.blaze.attackEntityAsMob(entitylivingbase);
                 }
 
                 this.blaze.getMoveHelper().setMoveTo(entitylivingbase.posX, entitylivingbase.posY, entitylivingbase.posZ, 1.0D);
             }
-            else if (d0 < 256.0D)
+            else if (d0 < this.func_191523_f() * this.func_191523_f())
             {
                 double d1 = entitylivingbase.posX - this.blaze.posX;
                 double d2 = entitylivingbase.getEntityBoundingBox().minY + (double)(entitylivingbase.height / 2.0F) - (this.blaze.posY + (double)(this.blaze.height / 2.0F));
                 double d3 = entitylivingbase.posZ - this.blaze.posZ;
 
-                if (this.field_179468_c <= 0)
+                if (this.attackTime <= 0)
                 {
-                    ++this.field_179467_b;
+                    ++this.attackStep;
 
-                    if (this.field_179467_b == 1)
+                    if (this.attackStep == 1)
                     {
-                        this.field_179468_c = 60;
+                        this.attackTime = 60;
                         this.blaze.setOnFire(true);
                     }
-                    else if (this.field_179467_b <= 4)
+                    else if (this.attackStep <= 4)
                     {
-                        this.field_179468_c = 6;
+                        this.attackTime = 6;
                     }
                     else
                     {
-                        this.field_179468_c = 100;
-                        this.field_179467_b = 0;
+                        this.attackTime = 100;
+                        this.attackStep = 0;
                         this.blaze.setOnFire(false);
                     }
 
-                    if (this.field_179467_b > 1)
+                    if (this.attackStep > 1)
                     {
-                        float f = MathHelper.sqrt_float(MathHelper.sqrt_double(d0)) * 0.5F;
-                        this.blaze.worldObj.playAuxSFXAtEntity((EntityPlayer)null, 1009, new BlockPos((int)this.blaze.posX, (int)this.blaze.posY, (int)this.blaze.posZ), 0);
+                        float f = MathHelper.sqrt(MathHelper.sqrt(d0)) * 0.5F;
+                        this.blaze.world.playEvent(null, 1018, new BlockPos((int)this.blaze.posX, (int)this.blaze.posY, (int)this.blaze.posZ), 0);
 
                         for (int i = 0; i < 1; ++i)
                         {
-                            EntitySmallFireball entitysmallfireball = new EntitySmallFireball(this.blaze.worldObj, this.blaze, d1 + this.blaze.getRNG().nextGaussian() * (double)f, d2, d3 + this.blaze.getRNG().nextGaussian() * (double)f);
+                            EntitySmallFireball entitysmallfireball = new EntitySmallFireball(this.blaze.world, this.blaze, d1 + this.blaze.getRNG().nextGaussian() * (double)f, d2, d3 + this.blaze.getRNG().nextGaussian() * (double)f);
                             entitysmallfireball.posY = this.blaze.posY + (double)(this.blaze.height / 2.0F) + 0.5D;
-                            this.blaze.worldObj.spawnEntityInWorld(entitysmallfireball);
+                            this.blaze.world.spawnEntityInWorld(entitysmallfireball);
                         }
                     }
                 }
@@ -300,6 +300,12 @@ public class EntityBlaze extends EntityMob
             }
 
             super.updateTask();
+        }
+
+        private double func_191523_f()
+        {
+            IAttributeInstance iattributeinstance = this.blaze.getEntityAttribute(SharedMonsterAttributes.FOLLOW_RANGE);
+            return iattributeinstance == null ? 16.0D : iattributeinstance.getAttributeValue();
         }
     }
 }
