@@ -1,68 +1,85 @@
 package net.minecraft.entity.monster;
 
+import com.google.common.base.Function;
+import com.google.common.base.Optional;
 import com.google.common.base.Predicate;
 import com.google.common.collect.Sets;
-import java.util.Collections;
-import java.util.List;
 import java.util.Random;
 import java.util.Set;
 import java.util.UUID;
+import javax.annotation.Nullable;
 import net.minecraft.block.Block;
 import net.minecraft.block.material.Material;
 import net.minecraft.block.state.IBlockState;
 import net.minecraft.entity.Entity;
+import net.minecraft.entity.EntityLiving;
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.SharedMonsterAttributes;
-import net.minecraft.entity.ai.EntityAIAttackOnCollide;
+import net.minecraft.entity.ai.EntityAIAttackMelee;
 import net.minecraft.entity.ai.EntityAIBase;
 import net.minecraft.entity.ai.EntityAIHurtByTarget;
 import net.minecraft.entity.ai.EntityAILookIdle;
 import net.minecraft.entity.ai.EntityAINearestAttackableTarget;
 import net.minecraft.entity.ai.EntityAISwimming;
-import net.minecraft.entity.ai.EntityAIWander;
+import net.minecraft.entity.ai.EntityAIWanderAvoidWater;
 import net.minecraft.entity.ai.EntityAIWatchClosest;
 import net.minecraft.entity.ai.attributes.AttributeModifier;
 import net.minecraft.entity.ai.attributes.IAttributeInstance;
 import net.minecraft.entity.player.EntityPlayer;
-import net.minecraft.entity.player.EntityPlayerMP;
 import net.minecraft.init.Blocks;
-import net.minecraft.init.Items;
+import net.minecraft.init.SoundEvents;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
-import net.minecraft.util.BlockPos;
+import net.minecraft.network.datasync.DataParameter;
+import net.minecraft.network.datasync.DataSerializers;
+import net.minecraft.network.datasync.EntityDataManager;
+import net.minecraft.pathfinding.PathNodeType;
 import net.minecraft.util.DamageSource;
-import net.minecraft.util.EntityDamageSource;
 import net.minecraft.util.EntityDamageSourceIndirect;
 import net.minecraft.util.EnumParticleTypes;
-import net.minecraft.util.MathHelper;
-import net.minecraft.util.Vec3;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.SoundEvent;
+import net.minecraft.util.datafix.DataFixer;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.MathHelper;
+import net.minecraft.util.math.RayTraceResult;
+import net.minecraft.util.math.Vec3d;
 import net.minecraft.world.World;
+import net.minecraft.world.storage.loot.LootTableList;
 
 public class EntityEnderman extends EntityMob
 {
-    private static final UUID attackingSpeedBoostModifierUUID = UUID.fromString("020E0DFB-87AE-4653-9556-831010E291A0");
-    private static final AttributeModifier attackingSpeedBoostModifier = (new AttributeModifier(attackingSpeedBoostModifierUUID, "Attacking speed boost", 0.15000000596046448D, 0)).setSaved(false);
-    private static final Set<Block> carriableBlocks = Sets.<Block>newIdentityHashSet();
-    private boolean isAggressive;
+    private static final UUID ATTACKING_SPEED_BOOST_ID = UUID.fromString("020E0DFB-87AE-4653-9556-831010E291A0");
+    private static final AttributeModifier ATTACKING_SPEED_BOOST = (new AttributeModifier(ATTACKING_SPEED_BOOST_ID, "Attacking speed boost", 0.15000000596046448D, 0)).setSaved(false);
+    private static final Set<Block> CARRIABLE_BLOCKS = Sets.newIdentityHashSet();
+    private static final DataParameter<Optional<IBlockState>> CARRIED_BLOCK = EntityDataManager.createKey(EntityEnderman.class, DataSerializers.OPTIONAL_BLOCK_STATE);
+    private static final DataParameter<Boolean> SCREAMING = EntityDataManager.createKey(EntityEnderman.class, DataSerializers.BOOLEAN);
+    private int lastCreepySound;
+    private int targetChangeTime;
 
     public EntityEnderman(World worldIn)
     {
         super(worldIn);
         this.setSize(0.6F, 2.9F);
         this.stepHeight = 1.0F;
+        this.setPathPriority(PathNodeType.WATER, -1.0F);
+    }
+
+    protected void initEntityAI()
+    {
         this.tasks.addTask(0, new EntityAISwimming(this));
-        this.tasks.addTask(2, new EntityAIAttackOnCollide(this, 1.0D, false));
-        this.tasks.addTask(7, new EntityAIWander(this, 1.0D));
+        this.tasks.addTask(2, new EntityAIAttackMelee(this, 1.0D, false));
+        this.tasks.addTask(7, new EntityAIWanderAvoidWater(this, 1.0D, 0.0F));
         this.tasks.addTask(8, new EntityAIWatchClosest(this, EntityPlayer.class, 8.0F));
         this.tasks.addTask(8, new EntityAILookIdle(this));
         this.tasks.addTask(10, new EntityEnderman.AIPlaceBlock(this));
         this.tasks.addTask(11, new EntityEnderman.AITakeBlock(this));
-        this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, false, new Class[0]));
-        this.targetTasks.addTask(2, new EntityEnderman.AIFindPlayer(this));
+        this.targetTasks.addTask(1, new EntityEnderman.AIFindPlayer(this));
+        this.targetTasks.addTask(2, new EntityAIHurtByTarget(this, false));
         this.targetTasks.addTask(3, new EntityAINearestAttackableTarget(this, EntityEndermite.class, 10, true, false, new Predicate<EntityEndermite>()
         {
-            public boolean apply(EntityEndermite p_apply_1_)
+            public boolean apply(@Nullable EntityEndermite p_apply_1_)
             {
                 return p_apply_1_.isSpawnedByPlayer();
             }
@@ -72,46 +89,108 @@ public class EntityEnderman extends EntityMob
     protected void applyEntityAttributes()
     {
         super.applyEntityAttributes();
-        this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(40.0D);
-        this.getEntityAttribute(SharedMonsterAttributes.movementSpeed).setBaseValue(0.30000001192092896D);
-        this.getEntityAttribute(SharedMonsterAttributes.attackDamage).setBaseValue(7.0D);
-        this.getEntityAttribute(SharedMonsterAttributes.followRange).setBaseValue(64.0D);
+        this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(40.0D);
+        this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED).setBaseValue(0.30000001192092896D);
+        this.getEntityAttribute(SharedMonsterAttributes.ATTACK_DAMAGE).setBaseValue(7.0D);
+        this.getEntityAttribute(SharedMonsterAttributes.FOLLOW_RANGE).setBaseValue(64.0D);
+    }
+
+    /**
+     * Sets the active target the Task system uses for tracking
+     */
+    public void setAttackTarget(@Nullable EntityLivingBase entitylivingbaseIn)
+    {
+        super.setAttackTarget(entitylivingbaseIn);
+        IAttributeInstance iattributeinstance = this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED);
+
+        if (entitylivingbaseIn == null)
+        {
+            this.targetChangeTime = 0;
+            this.dataManager.set(SCREAMING, Boolean.valueOf(false));
+            iattributeinstance.removeModifier(ATTACKING_SPEED_BOOST);
+        }
+        else
+        {
+            this.targetChangeTime = this.ticksExisted;
+            this.dataManager.set(SCREAMING, Boolean.valueOf(true));
+
+            if (!iattributeinstance.hasModifier(ATTACKING_SPEED_BOOST))
+            {
+                iattributeinstance.applyModifier(ATTACKING_SPEED_BOOST);
+            }
+        }
     }
 
     protected void entityInit()
     {
         super.entityInit();
-        this.dataWatcher.addObject(16, new Short((short)0));
-        this.dataWatcher.addObject(17, new Byte((byte)0));
-        this.dataWatcher.addObject(18, new Byte((byte)0));
+        this.dataManager.register(CARRIED_BLOCK, Optional.absent());
+        this.dataManager.register(SCREAMING, Boolean.valueOf(false));
+    }
+
+    public void playEndermanSound()
+    {
+        if (this.ticksExisted >= this.lastCreepySound + 400)
+        {
+            this.lastCreepySound = this.ticksExisted;
+
+            if (!this.isSilent())
+            {
+                this.world.playSound(this.posX, this.posY + (double)this.getEyeHeight(), this.posZ, SoundEvents.ENTITY_ENDERMEN_STARE, this.getSoundCategory(), 2.5F, 1.0F, false);
+            }
+        }
+    }
+
+    public void notifyDataManagerChange(DataParameter<?> key)
+    {
+        if (SCREAMING.equals(key) && this.isScreaming() && this.world.isRemote)
+        {
+            this.playEndermanSound();
+        }
+
+        super.notifyDataManagerChange(key);
+    }
+
+    public static void registerFixesEnderman(DataFixer fixer)
+    {
+        EntityLiving.registerFixesMob(fixer, EntityEnderman.class);
     }
 
     /**
      * (abstract) Protected helper method to write subclass entity data to NBT.
      */
-    public void writeEntityToNBT(NBTTagCompound tagCompound)
+    public void writeEntityToNBT(NBTTagCompound compound)
     {
-        super.writeEntityToNBT(tagCompound);
+        super.writeEntityToNBT(compound);
         IBlockState iblockstate = this.getHeldBlockState();
-        tagCompound.setShort("carried", (short)Block.getIdFromBlock(iblockstate.getBlock()));
-        tagCompound.setShort("carriedData", (short)iblockstate.getBlock().getMetaFromState(iblockstate));
+
+        if (iblockstate != null)
+        {
+            compound.setShort("carried", (short)Block.getIdFromBlock(iblockstate.getBlock()));
+            compound.setShort("carriedData", (short)iblockstate.getBlock().getMetaFromState(iblockstate));
+        }
     }
 
     /**
      * (abstract) Protected helper method to read subclass entity data from NBT.
      */
-    public void readEntityFromNBT(NBTTagCompound tagCompund)
+    public void readEntityFromNBT(NBTTagCompound compound)
     {
-        super.readEntityFromNBT(tagCompund);
+        super.readEntityFromNBT(compound);
         IBlockState iblockstate;
 
-        if (tagCompund.hasKey("carried", 8))
+        if (compound.hasKey("carried", 8))
         {
-            iblockstate = Block.getBlockFromName(tagCompund.getString("carried")).getStateFromMeta(tagCompund.getShort("carriedData") & 65535);
+            iblockstate = Block.getBlockFromName(compound.getString("carried")).getStateFromMeta(compound.getShort("carriedData") & 65535);
         }
         else
         {
-            iblockstate = Block.getBlockById(tagCompund.getShort("carried")).getStateFromMeta(tagCompund.getShort("carriedData") & 65535);
+            iblockstate = Block.getBlockById(compound.getShort("carried")).getStateFromMeta(compound.getShort("carriedData") & 65535);
+        }
+
+        if (iblockstate == null || iblockstate.getBlock() == null || iblockstate.getMaterial() == Material.AIR)
+        {
+            iblockstate = null;
         }
 
         this.setHeldBlockState(iblockstate);
@@ -122,20 +201,20 @@ public class EntityEnderman extends EntityMob
      */
     private boolean shouldAttackPlayer(EntityPlayer player)
     {
-        ItemStack itemstack = player.inventory.armorInventory[3];
+        ItemStack itemstack = player.inventory.armorInventory.get(3);
 
-        if (itemstack != null && itemstack.getItem() == Item.getItemFromBlock(Blocks.pumpkin))
+        if (itemstack.getItem() == Item.getItemFromBlock(Blocks.PUMPKIN))
         {
             return false;
         }
         else
         {
-            Vec3 vec3 = player.getLook(1.0F).normalize();
-            Vec3 vec31 = new Vec3(this.posX - player.posX, this.getEntityBoundingBox().minY + (double)(this.height / 2.0F) - (player.posY + (double)player.getEyeHeight()), this.posZ - player.posZ);
-            double d0 = vec31.lengthVector();
-            vec31 = vec31.normalize();
-            double d1 = vec3.dotProduct(vec31);
-            return d1 > 1.0D - 0.025D / d0 ? player.canEntityBeSeen(this) : false;
+            Vec3d vec3d = player.getLook(1.0F).normalize();
+            Vec3d vec3d1 = new Vec3d(this.posX - player.posX, this.getEntityBoundingBox().minY + (double)this.getEyeHeight() - (player.posY + (double)player.getEyeHeight()), this.posZ - player.posZ);
+            double d0 = vec3d1.lengthVector();
+            vec3d1 = vec3d1.normalize();
+            double d1 = vec3d.dotProduct(vec3d1);
+            return d1 > 1.0D - 0.025D / d0 && player.canEntityBeSeen(this);
         }
     }
 
@@ -150,11 +229,11 @@ public class EntityEnderman extends EntityMob
      */
     public void onLivingUpdate()
     {
-        if (this.worldObj.isRemote)
+        if (this.world.isRemote)
         {
             for (int i = 0; i < 2; ++i)
             {
-                this.worldObj.spawnParticle(EnumParticleTypes.PORTAL, this.posX + (this.rand.nextDouble() - 0.5D) * (double)this.width, this.posY + this.rand.nextDouble() * (double)this.height - 0.25D, this.posZ + (this.rand.nextDouble() - 0.5D) * (double)this.width, (this.rand.nextDouble() - 0.5D) * 2.0D, -this.rand.nextDouble(), (this.rand.nextDouble() - 0.5D) * 2.0D, new int[0]);
+                this.world.spawnParticle(EnumParticleTypes.PORTAL, this.posX + (this.rand.nextDouble() - 0.5D) * (double)this.width, this.posY + this.rand.nextDouble() * (double)this.height - 0.25D, this.posZ + (this.rand.nextDouble() - 0.5D) * (double)this.width, (this.rand.nextDouble() - 0.5D) * 2.0D, -this.rand.nextDouble(), (this.rand.nextDouble() - 0.5D) * 2.0D);
             }
         }
 
@@ -169,20 +248,13 @@ public class EntityEnderman extends EntityMob
             this.attackEntityFrom(DamageSource.drown, 1.0F);
         }
 
-        if (this.isScreaming() && !this.isAggressive && this.rand.nextInt(100) == 0)
+        if (this.world.isDaytime() && this.ticksExisted >= this.targetChangeTime + 600)
         {
-            this.setScreaming(false);
-        }
+            float f = this.getBrightness();
 
-        if (this.worldObj.isDaytime())
-        {
-            float f = this.getBrightness(1.0F);
-
-            if (f > 0.5F && this.worldObj.canSeeSky(new BlockPos(this)) && this.rand.nextFloat() * 30.0F < (f - 0.4F) * 2.0F)
+            if (f > 0.5F && this.world.canSeeSky(new BlockPos(this)) && this.rand.nextFloat() * 30.0F < (f - 0.4F) * 2.0F)
             {
-                this.setAttackTarget((EntityLivingBase)null);
-                this.setScreaming(false);
-                this.isAggressive = false;
+                this.setAttackTarget(null);
                 this.teleportRandomly();
             }
         }
@@ -206,148 +278,84 @@ public class EntityEnderman extends EntityMob
      */
     protected boolean teleportToEntity(Entity p_70816_1_)
     {
-        Vec3 vec3 = new Vec3(this.posX - p_70816_1_.posX, this.getEntityBoundingBox().minY + (double)(this.height / 2.0F) - p_70816_1_.posY + (double)p_70816_1_.getEyeHeight(), this.posZ - p_70816_1_.posZ);
-        vec3 = vec3.normalize();
+        Vec3d vec3d = new Vec3d(this.posX - p_70816_1_.posX, this.getEntityBoundingBox().minY + (double)(this.height / 2.0F) - p_70816_1_.posY + (double)p_70816_1_.getEyeHeight(), this.posZ - p_70816_1_.posZ);
+        vec3d = vec3d.normalize();
         double d0 = 16.0D;
-        double d1 = this.posX + (this.rand.nextDouble() - 0.5D) * 8.0D - vec3.xCoord * d0;
-        double d2 = this.posY + (double)(this.rand.nextInt(16) - 8) - vec3.yCoord * d0;
-        double d3 = this.posZ + (this.rand.nextDouble() - 0.5D) * 8.0D - vec3.zCoord * d0;
+        double d1 = this.posX + (this.rand.nextDouble() - 0.5D) * 8.0D - vec3d.xCoord * 16.0D;
+        double d2 = this.posY + (double)(this.rand.nextInt(16) - 8) - vec3d.yCoord * 16.0D;
+        double d3 = this.posZ + (this.rand.nextDouble() - 0.5D) * 8.0D - vec3d.zCoord * 16.0D;
         return this.teleportTo(d1, d2, d3);
     }
 
     /**
      * Teleport the enderman
      */
-    protected boolean teleportTo(double x, double y, double z)
+    private boolean teleportTo(double x, double y, double z)
     {
-        double d0 = this.posX;
-        double d1 = this.posY;
-        double d2 = this.posZ;
-        this.posX = x;
-        this.posY = y;
-        this.posZ = z;
-        boolean flag = false;
-        BlockPos blockpos = new BlockPos(this.posX, this.posY, this.posZ);
+        boolean flag = this.attemptTeleport(x, y, z);
 
-        if (this.worldObj.isBlockLoaded(blockpos))
+        if (flag)
         {
-            boolean flag1 = false;
-
-            while (!flag1 && blockpos.getY() > 0)
-            {
-                BlockPos blockpos1 = blockpos.down();
-                Block block = this.worldObj.getBlockState(blockpos1).getBlock();
-
-                if (block.getMaterial().blocksMovement())
-                {
-                    flag1 = true;
-                }
-                else
-                {
-                    --this.posY;
-                    blockpos = blockpos1;
-                }
-            }
-
-            if (flag1)
-            {
-                super.setPositionAndUpdate(this.posX, this.posY, this.posZ);
-
-                if (this.worldObj.getCollidingBoundingBoxes(this, this.getEntityBoundingBox()).isEmpty() && !this.worldObj.isAnyLiquid(this.getEntityBoundingBox()))
-                {
-                    flag = true;
-                }
-            }
+            this.world.playSound(null, this.prevPosX, this.prevPosY, this.prevPosZ, SoundEvents.ENTITY_ENDERMEN_TELEPORT, this.getSoundCategory(), 1.0F, 1.0F);
+            this.playSound(SoundEvents.ENTITY_ENDERMEN_TELEPORT, 1.0F, 1.0F);
         }
 
-        if (!flag)
-        {
-            this.setPosition(d0, d1, d2);
-            return false;
-        }
-        else
-        {
-            int i = 128;
+        return flag;
+    }
 
-            for (int j = 0; j < i; ++j)
-            {
-                double d6 = (double)j / ((double)i - 1.0D);
-                float f = (this.rand.nextFloat() - 0.5F) * 0.2F;
-                float f1 = (this.rand.nextFloat() - 0.5F) * 0.2F;
-                float f2 = (this.rand.nextFloat() - 0.5F) * 0.2F;
-                double d3 = d0 + (this.posX - d0) * d6 + (this.rand.nextDouble() - 0.5D) * (double)this.width * 2.0D;
-                double d4 = d1 + (this.posY - d1) * d6 + this.rand.nextDouble() * (double)this.height;
-                double d5 = d2 + (this.posZ - d2) * d6 + (this.rand.nextDouble() - 0.5D) * (double)this.width * 2.0D;
-                this.worldObj.spawnParticle(EnumParticleTypes.PORTAL, d3, d4, d5, (double)f, (double)f1, (double)f2, new int[0]);
-            }
+    protected SoundEvent getAmbientSound()
+    {
+        return this.isScreaming() ? SoundEvents.ENTITY_ENDERMEN_SCREAM : SoundEvents.ENTITY_ENDERMEN_AMBIENT;
+    }
 
-            this.worldObj.playSoundEffect(d0, d1, d2, "mob.endermen.portal", 1.0F, 1.0F);
-            this.playSound("mob.endermen.portal", 1.0F, 1.0F);
-            return true;
-        }
+    protected SoundEvent getHurtSound(DamageSource p_184601_1_)
+    {
+        return SoundEvents.ENTITY_ENDERMEN_HURT;
+    }
+
+    protected SoundEvent getDeathSound()
+    {
+        return SoundEvents.ENTITY_ENDERMEN_DEATH;
     }
 
     /**
-     * Returns the sound this mob makes while it's alive.
+     * Drop the equipment for this entity.
      */
-    protected String getLivingSound()
+    protected void dropEquipment(boolean wasRecentlyHit, int lootingModifier)
     {
-        return this.isScreaming() ? "mob.endermen.scream" : "mob.endermen.idle";
-    }
+        super.dropEquipment(wasRecentlyHit, lootingModifier);
+        IBlockState iblockstate = this.getHeldBlockState();
 
-    /**
-     * Returns the sound this mob makes when it is hurt.
-     */
-    protected String getHurtSound()
-    {
-        return "mob.endermen.hit";
-    }
-
-    /**
-     * Returns the sound this mob makes on death.
-     */
-    protected String getDeathSound()
-    {
-        return "mob.endermen.death";
-    }
-
-    protected Item getDropItem()
-    {
-        return Items.ender_pearl;
-    }
-
-    /**
-     * Drop 0-2 items of this living's type
-     */
-    protected void dropFewItems(boolean p_70628_1_, int p_70628_2_)
-    {
-        Item item = this.getDropItem();
-
-        if (item != null)
+        if (iblockstate != null)
         {
-            int i = this.rand.nextInt(2 + p_70628_2_);
-
-            for (int j = 0; j < i; ++j)
-            {
-                this.dropItem(item, 1);
-            }
+            Item item = Item.getItemFromBlock(iblockstate.getBlock());
+            int i = item.getHasSubtypes() ? iblockstate.getBlock().getMetaFromState(iblockstate) : 0;
+            this.entityDropItem(new ItemStack(item, 1, i), 0.0F);
         }
+    }
+
+    @Nullable
+    protected ResourceLocation getLootTable()
+    {
+        return LootTableList.ENTITIES_ENDERMAN;
     }
 
     /**
      * Sets this enderman's held block state
      */
-    public void setHeldBlockState(IBlockState state)
+    public void setHeldBlockState(@Nullable IBlockState state)
     {
-        this.dataWatcher.updateObject(16, Short.valueOf((short)(Block.getStateId(state) & 65535)));
+        this.dataManager.set(CARRIED_BLOCK, Optional.fromNullable(state));
     }
+
+    @Nullable
 
     /**
      * Gets this enderman's held block state
      */
     public IBlockState getHeldBlockState()
     {
-        return Block.getStateById(this.dataWatcher.getWatchableObjectShort(16) & 65535);
+        return (IBlockState)((Optional)this.dataManager.get(CARRIED_BLOCK)).orNull();
     }
 
     /**
@@ -359,43 +367,20 @@ public class EntityEnderman extends EntityMob
         {
             return false;
         }
-        else
+        else if (source instanceof EntityDamageSourceIndirect)
         {
-            if (source.getEntity() == null || !(source.getEntity() instanceof EntityEndermite))
+            for (int i = 0; i < 64; ++i)
             {
-                if (!this.worldObj.isRemote)
+                if (this.teleportRandomly())
                 {
-                    this.setScreaming(true);
-                }
-
-                if (source instanceof EntityDamageSource && source.getEntity() instanceof EntityPlayer)
-                {
-                    if (source.getEntity() instanceof EntityPlayerMP && ((EntityPlayerMP)source.getEntity()).theItemInWorldManager.isCreative())
-                    {
-                        this.setScreaming(false);
-                    }
-                    else
-                    {
-                        this.isAggressive = true;
-                    }
-                }
-
-                if (source instanceof EntityDamageSourceIndirect)
-                {
-                    this.isAggressive = false;
-
-                    for (int i = 0; i < 64; ++i)
-                    {
-                        if (this.teleportRandomly())
-                        {
-                            return true;
-                        }
-                    }
-
-                    return false;
+                    return true;
                 }
             }
 
+            return false;
+        }
+        else
+        {
             boolean flag = super.attackEntityFrom(source, amount);
 
             if (source.isUnblockable() && this.rand.nextInt(10) != 0)
@@ -409,74 +394,63 @@ public class EntityEnderman extends EntityMob
 
     public boolean isScreaming()
     {
-        return this.dataWatcher.getWatchableObjectByte(18) > 0;
-    }
-
-    public void setScreaming(boolean screaming)
-    {
-        this.dataWatcher.updateObject(18, Byte.valueOf((byte)(screaming ? 1 : 0)));
+        return this.dataManager.get(SCREAMING).booleanValue();
     }
 
     static
     {
-        carriableBlocks.add(Blocks.grass);
-        carriableBlocks.add(Blocks.dirt);
-        carriableBlocks.add(Blocks.sand);
-        carriableBlocks.add(Blocks.gravel);
-        carriableBlocks.add(Blocks.yellow_flower);
-        carriableBlocks.add(Blocks.red_flower);
-        carriableBlocks.add(Blocks.brown_mushroom);
-        carriableBlocks.add(Blocks.red_mushroom);
-        carriableBlocks.add(Blocks.tnt);
-        carriableBlocks.add(Blocks.cactus);
-        carriableBlocks.add(Blocks.clay);
-        carriableBlocks.add(Blocks.pumpkin);
-        carriableBlocks.add(Blocks.melon_block);
-        carriableBlocks.add(Blocks.mycelium);
+        CARRIABLE_BLOCKS.add(Blocks.GRASS);
+        CARRIABLE_BLOCKS.add(Blocks.DIRT);
+        CARRIABLE_BLOCKS.add(Blocks.SAND);
+        CARRIABLE_BLOCKS.add(Blocks.GRAVEL);
+        CARRIABLE_BLOCKS.add(Blocks.YELLOW_FLOWER);
+        CARRIABLE_BLOCKS.add(Blocks.RED_FLOWER);
+        CARRIABLE_BLOCKS.add(Blocks.BROWN_MUSHROOM);
+        CARRIABLE_BLOCKS.add(Blocks.RED_MUSHROOM);
+        CARRIABLE_BLOCKS.add(Blocks.TNT);
+        CARRIABLE_BLOCKS.add(Blocks.CACTUS);
+        CARRIABLE_BLOCKS.add(Blocks.CLAY);
+        CARRIABLE_BLOCKS.add(Blocks.PUMPKIN);
+        CARRIABLE_BLOCKS.add(Blocks.MELON_BLOCK);
+        CARRIABLE_BLOCKS.add(Blocks.MYCELIUM);
+        CARRIABLE_BLOCKS.add(Blocks.NETHERRACK);
     }
 
-    static class AIFindPlayer extends EntityAINearestAttackableTarget
+    static class AIFindPlayer extends EntityAINearestAttackableTarget<EntityPlayer>
     {
+        private final EntityEnderman enderman;
         private EntityPlayer player;
-        private int field_179450_h;
-        private int field_179451_i;
-        private EntityEnderman enderman;
+        private int aggroTime;
+        private int teleportTime;
 
         public AIFindPlayer(EntityEnderman p_i45842_1_)
         {
-            super(p_i45842_1_, EntityPlayer.class, true);
+            super(p_i45842_1_, EntityPlayer.class, false);
             this.enderman = p_i45842_1_;
         }
 
         public boolean shouldExecute()
         {
             double d0 = this.getTargetDistance();
-            List<EntityPlayer> list = this.taskOwner.worldObj.<EntityPlayer>getEntitiesWithinAABB(EntityPlayer.class, this.taskOwner.getEntityBoundingBox().expand(d0, 4.0D, d0), this.targetEntitySelector);
-            Collections.sort(list, this.theNearestAttackableTargetSorter);
-
-            if (list.isEmpty())
+            this.player = this.enderman.world.getNearestAttackablePlayer(this.enderman.posX, this.enderman.posY, this.enderman.posZ, d0, d0, null, new Predicate<EntityPlayer>()
             {
-                return false;
-            }
-            else
-            {
-                this.player = (EntityPlayer)list.get(0);
-                return true;
-            }
+                public boolean apply(@Nullable EntityPlayer p_apply_1_)
+                {
+                    return p_apply_1_ != null && AIFindPlayer.this.enderman.shouldAttackPlayer(p_apply_1_);
+                }
+            });
+            return this.player != null;
         }
 
         public void startExecuting()
         {
-            this.field_179450_h = 5;
-            this.field_179451_i = 0;
+            this.aggroTime = 5;
+            this.teleportTime = 0;
         }
 
         public void resetTask()
         {
             this.player = null;
-            this.enderman.setScreaming(false);
-            IAttributeInstance iattributeinstance = this.enderman.getEntityAttribute(SharedMonsterAttributes.movementSpeed);
-            iattributeinstance.removeModifier(EntityEnderman.attackingSpeedBoostModifier);
             super.resetTask();
         }
 
@@ -490,14 +464,13 @@ public class EntityEnderman extends EntityMob
                 }
                 else
                 {
-                    this.enderman.isAggressive = true;
                     this.enderman.faceEntity(this.player, 10.0F, 10.0F);
                     return true;
                 }
             }
             else
             {
-                return super.continueExecuting();
+                return this.targetEntity != null && this.targetEntity.isEntityAlive() || super.continueExecuting();
             }
         }
 
@@ -505,33 +478,29 @@ public class EntityEnderman extends EntityMob
         {
             if (this.player != null)
             {
-                if (--this.field_179450_h <= 0)
+                if (--this.aggroTime <= 0)
                 {
                     this.targetEntity = this.player;
                     this.player = null;
                     super.startExecuting();
-                    this.enderman.playSound("mob.endermen.stare", 1.0F, 1.0F);
-                    this.enderman.setScreaming(true);
-                    IAttributeInstance iattributeinstance = this.enderman.getEntityAttribute(SharedMonsterAttributes.movementSpeed);
-                    iattributeinstance.applyModifier(EntityEnderman.attackingSpeedBoostModifier);
                 }
             }
             else
             {
                 if (this.targetEntity != null)
                 {
-                    if (this.targetEntity instanceof EntityPlayer && this.enderman.shouldAttackPlayer((EntityPlayer)this.targetEntity))
+                    if (this.enderman.shouldAttackPlayer(this.targetEntity))
                     {
                         if (this.targetEntity.getDistanceSqToEntity(this.enderman) < 16.0D)
                         {
                             this.enderman.teleportRandomly();
                         }
 
-                        this.field_179451_i = 0;
+                        this.teleportTime = 0;
                     }
-                    else if (this.targetEntity.getDistanceSqToEntity(this.enderman) > 256.0D && this.field_179451_i++ >= 30 && this.enderman.teleportToEntity(this.targetEntity))
+                    else if (this.targetEntity.getDistanceSqToEntity(this.enderman) > 256.0D && this.teleportTime++ >= 30 && this.enderman.teleportToEntity(this.targetEntity))
                     {
-                        this.field_179451_i = 0;
+                        this.teleportTime = 0;
                     }
                 }
 
@@ -542,7 +511,7 @@ public class EntityEnderman extends EntityMob
 
     static class AIPlaceBlock extends EntityAIBase
     {
-        private EntityEnderman enderman;
+        private final EntityEnderman enderman;
 
         public AIPlaceBlock(EntityEnderman p_i45843_1_)
         {
@@ -551,36 +520,63 @@ public class EntityEnderman extends EntityMob
 
         public boolean shouldExecute()
         {
-            return !this.enderman.worldObj.getGameRules().getBoolean("mobGriefing") ? false : (this.enderman.getHeldBlockState().getBlock().getMaterial() == Material.air ? false : this.enderman.getRNG().nextInt(2000) == 0);
+            if (this.enderman.getHeldBlockState() == null)
+            {
+                return false;
+            }
+            else if (!this.enderman.world.getGameRules().getBoolean("mobGriefing"))
+            {
+                return false;
+            }
+            else
+            {
+                return this.enderman.getRNG().nextInt(2000) == 0;
+            }
         }
 
         public void updateTask()
         {
             Random random = this.enderman.getRNG();
-            World world = this.enderman.worldObj;
-            int i = MathHelper.floor_double(this.enderman.posX - 1.0D + random.nextDouble() * 2.0D);
-            int j = MathHelper.floor_double(this.enderman.posY + random.nextDouble() * 2.0D);
-            int k = MathHelper.floor_double(this.enderman.posZ - 1.0D + random.nextDouble() * 2.0D);
+            World world = this.enderman.world;
+            int i = MathHelper.floor(this.enderman.posX - 1.0D + random.nextDouble() * 2.0D);
+            int j = MathHelper.floor(this.enderman.posY + random.nextDouble() * 2.0D);
+            int k = MathHelper.floor(this.enderman.posZ - 1.0D + random.nextDouble() * 2.0D);
             BlockPos blockpos = new BlockPos(i, j, k);
-            Block block = world.getBlockState(blockpos).getBlock();
-            Block block1 = world.getBlockState(blockpos.down()).getBlock();
+            IBlockState iblockstate = world.getBlockState(blockpos);
+            IBlockState iblockstate1 = world.getBlockState(blockpos.down());
+            IBlockState iblockstate2 = this.enderman.getHeldBlockState();
 
-            if (this.func_179474_a(world, blockpos, this.enderman.getHeldBlockState().getBlock(), block, block1))
+            if (iblockstate2 != null && this.canPlaceBlock(world, blockpos, iblockstate2.getBlock(), iblockstate, iblockstate1))
             {
-                world.setBlockState(blockpos, this.enderman.getHeldBlockState(), 3);
-                this.enderman.setHeldBlockState(Blocks.air.getDefaultState());
+                world.setBlockState(blockpos, iblockstate2, 3);
+                this.enderman.setHeldBlockState(null);
             }
         }
 
-        private boolean func_179474_a(World worldIn, BlockPos p_179474_2_, Block p_179474_3_, Block p_179474_4_, Block p_179474_5_)
+        private boolean canPlaceBlock(World p_188518_1_, BlockPos p_188518_2_, Block p_188518_3_, IBlockState p_188518_4_, IBlockState p_188518_5_)
         {
-            return !p_179474_3_.canPlaceBlockAt(worldIn, p_179474_2_) ? false : (p_179474_4_.getMaterial() != Material.air ? false : (p_179474_5_.getMaterial() == Material.air ? false : p_179474_5_.isFullCube()));
+            if (!p_188518_3_.canPlaceBlockAt(p_188518_1_, p_188518_2_))
+            {
+                return false;
+            }
+            else if (p_188518_4_.getMaterial() != Material.AIR)
+            {
+                return false;
+            }
+            else if (p_188518_5_.getMaterial() == Material.AIR)
+            {
+                return false;
+            }
+            else
+            {
+                return p_188518_5_.isFullCube();
+            }
         }
     }
 
     static class AITakeBlock extends EntityAIBase
     {
-        private EntityEnderman enderman;
+        private final EntityEnderman enderman;
 
         public AITakeBlock(EntityEnderman p_i45841_1_)
         {
@@ -589,24 +585,37 @@ public class EntityEnderman extends EntityMob
 
         public boolean shouldExecute()
         {
-            return !this.enderman.worldObj.getGameRules().getBoolean("mobGriefing") ? false : (this.enderman.getHeldBlockState().getBlock().getMaterial() != Material.air ? false : this.enderman.getRNG().nextInt(20) == 0);
+            if (this.enderman.getHeldBlockState() != null)
+            {
+                return false;
+            }
+            else if (!this.enderman.world.getGameRules().getBoolean("mobGriefing"))
+            {
+                return false;
+            }
+            else
+            {
+                return this.enderman.getRNG().nextInt(20) == 0;
+            }
         }
 
         public void updateTask()
         {
             Random random = this.enderman.getRNG();
-            World world = this.enderman.worldObj;
-            int i = MathHelper.floor_double(this.enderman.posX - 2.0D + random.nextDouble() * 4.0D);
-            int j = MathHelper.floor_double(this.enderman.posY + random.nextDouble() * 3.0D);
-            int k = MathHelper.floor_double(this.enderman.posZ - 2.0D + random.nextDouble() * 4.0D);
+            World world = this.enderman.world;
+            int i = MathHelper.floor(this.enderman.posX - 2.0D + random.nextDouble() * 4.0D);
+            int j = MathHelper.floor(this.enderman.posY + random.nextDouble() * 3.0D);
+            int k = MathHelper.floor(this.enderman.posZ - 2.0D + random.nextDouble() * 4.0D);
             BlockPos blockpos = new BlockPos(i, j, k);
             IBlockState iblockstate = world.getBlockState(blockpos);
             Block block = iblockstate.getBlock();
+            RayTraceResult raytraceresult = world.rayTraceBlocks(new Vec3d((float)MathHelper.floor(this.enderman.posX) + 0.5F, (float)j + 0.5F, (float)MathHelper.floor(this.enderman.posZ) + 0.5F), new Vec3d((float)i + 0.5F, (float)j + 0.5F, (float)k + 0.5F), false, true, false);
+            boolean flag = raytraceresult != null && raytraceresult.getBlockPos().equals(blockpos);
 
-            if (EntityEnderman.carriableBlocks.contains(block))
+            if (EntityEnderman.CARRIABLE_BLOCKS.contains(block) && flag)
             {
                 this.enderman.setHeldBlockState(iblockstate);
-                world.setBlockState(blockpos, Blocks.air.getDefaultState());
+                world.setBlockToAir(blockpos);
             }
         }
     }
