@@ -1,46 +1,65 @@
 package net.minecraft.entity.monster;
 
 import java.util.Random;
+import javax.annotation.Nullable;
 import net.minecraft.block.Block;
-import net.minecraft.entity.Entity;
+import net.minecraft.entity.EntityLiving;
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.EnumCreatureAttribute;
 import net.minecraft.entity.IEntityLivingData;
 import net.minecraft.entity.SharedMonsterAttributes;
-import net.minecraft.entity.ai.EntityAIAttackOnCollide;
+import net.minecraft.entity.ai.EntityAIAttackMelee;
 import net.minecraft.entity.ai.EntityAIHurtByTarget;
 import net.minecraft.entity.ai.EntityAILeapAtTarget;
 import net.minecraft.entity.ai.EntityAILookIdle;
 import net.minecraft.entity.ai.EntityAINearestAttackableTarget;
 import net.minecraft.entity.ai.EntityAISwimming;
-import net.minecraft.entity.ai.EntityAIWander;
+import net.minecraft.entity.ai.EntityAIWanderAvoidWater;
 import net.minecraft.entity.ai.EntityAIWatchClosest;
 import net.minecraft.entity.player.EntityPlayer;
-import net.minecraft.init.Items;
-import net.minecraft.item.Item;
+import net.minecraft.init.MobEffects;
+import net.minecraft.init.SoundEvents;
+import net.minecraft.network.datasync.DataParameter;
+import net.minecraft.network.datasync.DataSerializers;
+import net.minecraft.network.datasync.EntityDataManager;
 import net.minecraft.pathfinding.PathNavigate;
 import net.minecraft.pathfinding.PathNavigateClimber;
 import net.minecraft.potion.Potion;
 import net.minecraft.potion.PotionEffect;
-import net.minecraft.util.BlockPos;
+import net.minecraft.util.DamageSource;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.SoundEvent;
+import net.minecraft.util.datafix.DataFixer;
+import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.DifficultyInstance;
 import net.minecraft.world.EnumDifficulty;
 import net.minecraft.world.World;
+import net.minecraft.world.storage.loot.LootTableList;
 
 public class EntitySpider extends EntityMob
 {
+    private static final DataParameter<Byte> CLIMBING = EntityDataManager.createKey(EntitySpider.class, DataSerializers.BYTE);
+
     public EntitySpider(World worldIn)
     {
         super(worldIn);
         this.setSize(1.4F, 0.9F);
+    }
+
+    public static void registerFixesSpider(DataFixer fixer)
+    {
+        EntityLiving.registerFixesMob(fixer, EntitySpider.class);
+    }
+
+    protected void initEntityAI()
+    {
         this.tasks.addTask(1, new EntityAISwimming(this));
         this.tasks.addTask(3, new EntityAILeapAtTarget(this, 0.4F));
-        this.tasks.addTask(4, new EntitySpider.AISpiderAttack(this, EntityPlayer.class));
-        this.tasks.addTask(4, new EntitySpider.AISpiderAttack(this, EntityIronGolem.class));
-        this.tasks.addTask(5, new EntityAIWander(this, 0.8D));
+        this.tasks.addTask(4, new EntitySpider.AISpiderAttack(this));
+        this.tasks.addTask(5, new EntityAIWanderAvoidWater(this, 0.8D));
         this.tasks.addTask(6, new EntityAIWatchClosest(this, EntityPlayer.class, 8.0F));
         this.tasks.addTask(6, new EntityAILookIdle(this));
-        this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, false, new Class[0]));
+        this.targetTasks.addTask(1, new EntityAIHurtByTarget(this, false));
         this.targetTasks.addTask(2, new EntitySpider.AISpiderTarget(this, EntityPlayer.class));
         this.targetTasks.addTask(3, new EntitySpider.AISpiderTarget(this, EntityIronGolem.class));
     }
@@ -50,7 +69,7 @@ public class EntitySpider extends EntityMob
      */
     public double getMountedYOffset()
     {
-        return (double)(this.height * 0.5F);
+        return this.height * 0.5F;
     }
 
     /**
@@ -64,7 +83,7 @@ public class EntitySpider extends EntityMob
     protected void entityInit()
     {
         super.entityInit();
-        this.dataWatcher.addObject(16, new Byte((byte)0));
+        this.dataManager.register(CLIMBING, Byte.valueOf((byte)0));
     }
 
     /**
@@ -74,7 +93,7 @@ public class EntitySpider extends EntityMob
     {
         super.onUpdate();
 
-        if (!this.worldObj.isRemote)
+        if (!this.world.isRemote)
         {
             this.setBesideClimbableBlock(this.isCollidedHorizontally);
         }
@@ -83,55 +102,34 @@ public class EntitySpider extends EntityMob
     protected void applyEntityAttributes()
     {
         super.applyEntityAttributes();
-        this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(16.0D);
-        this.getEntityAttribute(SharedMonsterAttributes.movementSpeed).setBaseValue(0.30000001192092896D);
+        this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(16.0D);
+        this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED).setBaseValue(0.30000001192092896D);
     }
 
-    /**
-     * Returns the sound this mob makes while it's alive.
-     */
-    protected String getLivingSound()
+    protected SoundEvent getAmbientSound()
     {
-        return "mob.spider.say";
+        return SoundEvents.ENTITY_SPIDER_AMBIENT;
     }
 
-    /**
-     * Returns the sound this mob makes when it is hurt.
-     */
-    protected String getHurtSound()
+    protected SoundEvent getHurtSound(DamageSource p_184601_1_)
     {
-        return "mob.spider.say";
+        return SoundEvents.ENTITY_SPIDER_HURT;
     }
 
-    /**
-     * Returns the sound this mob makes on death.
-     */
-    protected String getDeathSound()
+    protected SoundEvent getDeathSound()
     {
-        return "mob.spider.death";
+        return SoundEvents.ENTITY_SPIDER_DEATH;
     }
 
     protected void playStepSound(BlockPos pos, Block blockIn)
     {
-        this.playSound("mob.spider.step", 0.15F, 1.0F);
+        this.playSound(SoundEvents.ENTITY_SPIDER_STEP, 0.15F, 1.0F);
     }
 
-    protected Item getDropItem()
+    @Nullable
+    protected ResourceLocation getLootTable()
     {
-        return Items.string;
-    }
-
-    /**
-     * Drop 0-2 items of this living's type
-     */
-    protected void dropFewItems(boolean p_70628_1_, int p_70628_2_)
-    {
-        super.dropFewItems(p_70628_1_, p_70628_2_);
-
-        if (p_70628_1_ && (this.rand.nextInt(3) == 0 || this.rand.nextInt(1 + p_70628_2_) > 0))
-        {
-            this.dropItem(Items.spider_eye, 1);
-        }
+        return LootTableList.ENTITIES_SPIDER;
     }
 
     /**
@@ -159,7 +157,7 @@ public class EntitySpider extends EntityMob
 
     public boolean isPotionApplicable(PotionEffect potioneffectIn)
     {
-        return potioneffectIn.getPotionID() == Potion.poison.id ? false : super.isPotionApplicable(potioneffectIn);
+        return potioneffectIn.getPotion() != MobEffects.POISON && super.isPotionApplicable(potioneffectIn);
     }
 
     /**
@@ -168,18 +166,18 @@ public class EntitySpider extends EntityMob
      */
     public boolean isBesideClimbableBlock()
     {
-        return (this.dataWatcher.getWatchableObjectByte(16) & 1) != 0;
+        return (this.dataManager.get(CLIMBING).byteValue() & 1) != 0;
     }
 
     /**
      * Updates the WatchableObject (Byte) created in entityInit(), setting it to 0x01 if par1 is true or 0x00 if it is
      * false.
      */
-    public void setBesideClimbableBlock(boolean p_70839_1_)
+    public void setBesideClimbableBlock(boolean climbing)
     {
-        byte b0 = this.dataWatcher.getWatchableObjectByte(16);
+        byte b0 = this.dataManager.get(CLIMBING).byteValue();
 
-        if (p_70839_1_)
+        if (climbing)
         {
             b0 = (byte)(b0 | 1);
         }
@@ -188,43 +186,45 @@ public class EntitySpider extends EntityMob
             b0 = (byte)(b0 & -2);
         }
 
-        this.dataWatcher.updateObject(16, Byte.valueOf(b0));
+        this.dataManager.set(CLIMBING, Byte.valueOf(b0));
     }
+
+    @Nullable
 
     /**
      * Called only once on an entity when first time spawned, via egg, mob spawner, natural spawning etc, but not called
      * when entity is reloaded from nbt. Mainly used for initializing attributes and inventory
      */
-    public IEntityLivingData onInitialSpawn(DifficultyInstance difficulty, IEntityLivingData livingdata)
+    public IEntityLivingData onInitialSpawn(DifficultyInstance difficulty, @Nullable IEntityLivingData livingdata)
     {
         livingdata = super.onInitialSpawn(difficulty, livingdata);
 
-        if (this.worldObj.rand.nextInt(100) == 0)
+        if (this.world.rand.nextInt(100) == 0)
         {
-            EntitySkeleton entityskeleton = new EntitySkeleton(this.worldObj);
+            EntitySkeleton entityskeleton = new EntitySkeleton(this.world);
             entityskeleton.setLocationAndAngles(this.posX, this.posY, this.posZ, this.rotationYaw, 0.0F);
-            entityskeleton.onInitialSpawn(difficulty, (IEntityLivingData)null);
-            this.worldObj.spawnEntityInWorld(entityskeleton);
-            entityskeleton.mountEntity(this);
+            entityskeleton.onInitialSpawn(difficulty, null);
+            this.world.spawnEntityInWorld(entityskeleton);
+            entityskeleton.startRiding(this);
         }
 
         if (livingdata == null)
         {
             livingdata = new EntitySpider.GroupData();
 
-            if (this.worldObj.getDifficulty() == EnumDifficulty.HARD && this.worldObj.rand.nextFloat() < 0.1F * difficulty.getClampedAdditionalDifficulty())
+            if (this.world.getDifficulty() == EnumDifficulty.HARD && this.world.rand.nextFloat() < 0.1F * difficulty.getClampedAdditionalDifficulty())
             {
-                ((EntitySpider.GroupData)livingdata).func_111104_a(this.worldObj.rand);
+                ((EntitySpider.GroupData)livingdata).setRandomEffect(this.world.rand);
             }
         }
 
         if (livingdata instanceof EntitySpider.GroupData)
         {
-            int i = ((EntitySpider.GroupData)livingdata).potionEffectId;
+            Potion potion = ((EntitySpider.GroupData)livingdata).effect;
 
-            if (i > 0 && Potion.potionTypes[i] != null)
+            if (potion != null)
             {
-                this.addPotionEffect(new PotionEffect(i, Integer.MAX_VALUE));
+                this.addPotionEffect(new PotionEffect(potion, Integer.MAX_VALUE));
             }
         }
 
@@ -236,20 +236,20 @@ public class EntitySpider extends EntityMob
         return 0.65F;
     }
 
-    static class AISpiderAttack extends EntityAIAttackOnCollide
+    static class AISpiderAttack extends EntityAIAttackMelee
     {
-        public AISpiderAttack(EntitySpider p_i45819_1_, Class <? extends Entity > targetClass)
+        public AISpiderAttack(EntitySpider spider)
         {
-            super(p_i45819_1_, targetClass, 1.0D, true);
+            super(spider, 1.0D, true);
         }
 
         public boolean continueExecuting()
         {
-            float f = this.attacker.getBrightness(1.0F);
+            float f = this.attacker.getBrightness();
 
             if (f >= 0.5F && this.attacker.getRNG().nextInt(100) == 0)
             {
-                this.attacker.setAttackTarget((EntityLivingBase)null);
+                this.attacker.setAttackTarget(null);
                 return false;
             }
             else
@@ -258,49 +258,49 @@ public class EntitySpider extends EntityMob
             }
         }
 
-        protected double func_179512_a(EntityLivingBase attackTarget)
+        protected double getAttackReachSqr(EntityLivingBase attackTarget)
         {
-            return (double)(4.0F + attackTarget.width);
+            return 4.0F + attackTarget.width;
         }
     }
 
-    static class AISpiderTarget<T extends EntityLivingBase> extends EntityAINearestAttackableTarget
+    static class AISpiderTarget<T extends EntityLivingBase> extends EntityAINearestAttackableTarget<T>
     {
-        public AISpiderTarget(EntitySpider p_i45818_1_, Class<T> classTarget)
+        public AISpiderTarget(EntitySpider spider, Class<T> classTarget)
         {
-            super(p_i45818_1_, classTarget, true);
+            super(spider, classTarget, true);
         }
 
         public boolean shouldExecute()
         {
-            float f = this.taskOwner.getBrightness(1.0F);
-            return f >= 0.5F ? false : super.shouldExecute();
+            float f = this.taskOwner.getBrightness();
+            return !(f >= 0.5F) && super.shouldExecute();
         }
     }
 
     public static class GroupData implements IEntityLivingData
     {
-        public int potionEffectId;
+        public Potion effect;
 
-        public void func_111104_a(Random rand)
+        public void setRandomEffect(Random rand)
         {
             int i = rand.nextInt(5);
 
             if (i <= 1)
             {
-                this.potionEffectId = Potion.moveSpeed.id;
+                this.effect = MobEffects.SPEED;
             }
             else if (i <= 2)
             {
-                this.potionEffectId = Potion.damageBoost.id;
+                this.effect = MobEffects.STRENGTH;
             }
             else if (i <= 3)
             {
-                this.potionEffectId = Potion.regeneration.id;
+                this.effect = MobEffects.REGENERATION;
             }
             else if (i <= 4)
             {
-                this.potionEffectId = Potion.invisibility.id;
+                this.effect = MobEffects.INVISIBILITY;
             }
         }
     }
