@@ -3,8 +3,10 @@ package net.minecraft.entity.passive;
 import com.google.common.collect.Maps;
 import java.util.Map;
 import java.util.Random;
+import javax.annotation.Nullable;
 import net.minecraft.block.Block;
 import net.minecraft.entity.EntityAgeable;
+import net.minecraft.entity.EntityLiving;
 import net.minecraft.entity.IEntityLivingData;
 import net.minecraft.entity.SharedMonsterAttributes;
 import net.minecraft.entity.ai.EntityAIEatGrass;
@@ -14,12 +16,13 @@ import net.minecraft.entity.ai.EntityAIMate;
 import net.minecraft.entity.ai.EntityAIPanic;
 import net.minecraft.entity.ai.EntityAISwimming;
 import net.minecraft.entity.ai.EntityAITempt;
-import net.minecraft.entity.ai.EntityAIWander;
+import net.minecraft.entity.ai.EntityAIWanderAvoidWater;
 import net.minecraft.entity.ai.EntityAIWatchClosest;
 import net.minecraft.entity.item.EntityItem;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.init.Blocks;
 import net.minecraft.init.Items;
+import net.minecraft.init.SoundEvents;
 import net.minecraft.inventory.Container;
 import net.minecraft.inventory.InventoryCrafting;
 import net.minecraft.item.EnumDyeColor;
@@ -27,14 +30,24 @@ import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
 import net.minecraft.item.crafting.CraftingManager;
 import net.minecraft.nbt.NBTTagCompound;
-import net.minecraft.pathfinding.PathNavigateGround;
-import net.minecraft.util.BlockPos;
-import net.minecraft.util.MathHelper;
+import net.minecraft.network.datasync.DataParameter;
+import net.minecraft.network.datasync.DataSerializers;
+import net.minecraft.network.datasync.EntityDataManager;
+import net.minecraft.util.DamageSource;
+import net.minecraft.util.EnumHand;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.SoundEvent;
+import net.minecraft.util.datafix.DataFixer;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.MathHelper;
 import net.minecraft.world.DifficultyInstance;
 import net.minecraft.world.World;
+import net.minecraft.world.storage.loot.LootTableList;
 
 public class EntitySheep extends EntityAnimal
 {
+    private static final DataParameter<Byte> DYE_COLOR = EntityDataManager.createKey(EntitySheep.class, DataSerializers.BYTE);
+
     /**
      * Internal crafting inventory used to check the result of mixing dyes corresponding to the fleece color when
      * breeding sheep.
@@ -53,29 +66,40 @@ public class EntitySheep extends EntityAnimal
      * tick.
      */
     private int sheepTimer;
-    private EntityAIEatGrass entityAIEatGrass = new EntityAIEatGrass(this);
+    private EntityAIEatGrass entityAIEatGrass;
 
-    public static float[] func_175513_a(EnumDyeColor dyeColor)
+    private static float[] func_192020_c(EnumDyeColor p_192020_0_)
     {
-        return (float[])DYE_TO_RGB.get(dyeColor);
+        float[] afloat = p_192020_0_.func_193349_f();
+        float f = 0.75F;
+        return new float[] {afloat[0] * 0.75F, afloat[1] * 0.75F, afloat[2] * 0.75F};
+    }
+
+    public static float[] getDyeRgb(EnumDyeColor dyeColor)
+    {
+        return DYE_TO_RGB.get(dyeColor);
     }
 
     public EntitySheep(World worldIn)
     {
         super(worldIn);
         this.setSize(0.9F, 1.3F);
-        ((PathNavigateGround)this.getNavigator()).setAvoidsWater(true);
+        this.inventoryCrafting.setInventorySlotContents(0, new ItemStack(Items.DYE));
+        this.inventoryCrafting.setInventorySlotContents(1, new ItemStack(Items.DYE));
+    }
+
+    protected void initEntityAI()
+    {
+        this.entityAIEatGrass = new EntityAIEatGrass(this);
         this.tasks.addTask(0, new EntityAISwimming(this));
         this.tasks.addTask(1, new EntityAIPanic(this, 1.25D));
         this.tasks.addTask(2, new EntityAIMate(this, 1.0D));
-        this.tasks.addTask(3, new EntityAITempt(this, 1.1D, Items.wheat, false));
+        this.tasks.addTask(3, new EntityAITempt(this, 1.1D, Items.WHEAT, false));
         this.tasks.addTask(4, new EntityAIFollowParent(this, 1.1D));
         this.tasks.addTask(5, this.entityAIEatGrass);
-        this.tasks.addTask(6, new EntityAIWander(this, 1.0D));
+        this.tasks.addTask(6, new EntityAIWanderAvoidWater(this, 1.0D));
         this.tasks.addTask(7, new EntityAIWatchClosest(this, EntityPlayer.class, 6.0F));
         this.tasks.addTask(8, new EntityAILookIdle(this));
-        this.inventoryCrafting.setInventorySlotContents(0, new ItemStack(Items.dye, 1, 0));
-        this.inventoryCrafting.setInventorySlotContents(1, new ItemStack(Items.dye, 1, 0));
     }
 
     protected void updateAITasks()
@@ -90,7 +114,7 @@ public class EntitySheep extends EntityAnimal
      */
     public void onLivingUpdate()
     {
-        if (this.worldObj.isRemote)
+        if (this.world.isRemote)
         {
             this.sheepTimer = Math.max(0, this.sheepTimer - 1);
         }
@@ -101,44 +125,77 @@ public class EntitySheep extends EntityAnimal
     protected void applyEntityAttributes()
     {
         super.applyEntityAttributes();
-        this.getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(8.0D);
-        this.getEntityAttribute(SharedMonsterAttributes.movementSpeed).setBaseValue(0.23000000417232513D);
+        this.getEntityAttribute(SharedMonsterAttributes.MAX_HEALTH).setBaseValue(8.0D);
+        this.getEntityAttribute(SharedMonsterAttributes.MOVEMENT_SPEED).setBaseValue(0.23000000417232513D);
     }
 
     protected void entityInit()
     {
         super.entityInit();
-        this.dataWatcher.addObject(16, new Byte((byte)0));
+        this.dataManager.register(DYE_COLOR, Byte.valueOf((byte)0));
     }
 
-    /**
-     * Drop 0-2 items of this living's type
-     */
-    protected void dropFewItems(boolean p_70628_1_, int p_70628_2_)
+    @Nullable
+    protected ResourceLocation getLootTable()
     {
-        if (!this.getSheared())
+        if (this.getSheared())
         {
-            this.entityDropItem(new ItemStack(Item.getItemFromBlock(Blocks.wool), 1, this.getFleeceColor().getMetadata()), 0.0F);
+            return LootTableList.ENTITIES_SHEEP;
         }
-
-        int i = this.rand.nextInt(2) + 1 + this.rand.nextInt(1 + p_70628_2_);
-
-        for (int j = 0; j < i; ++j)
+        else
         {
-            if (this.isBurning())
+            switch (this.getFleeceColor())
             {
-                this.dropItem(Items.cooked_mutton, 1);
-            }
-            else
-            {
-                this.dropItem(Items.mutton, 1);
+                case WHITE:
+                default:
+                    return LootTableList.ENTITIES_SHEEP_WHITE;
+
+                case ORANGE:
+                    return LootTableList.ENTITIES_SHEEP_ORANGE;
+
+                case MAGENTA:
+                    return LootTableList.ENTITIES_SHEEP_MAGENTA;
+
+                case LIGHT_BLUE:
+                    return LootTableList.ENTITIES_SHEEP_LIGHT_BLUE;
+
+                case YELLOW:
+                    return LootTableList.ENTITIES_SHEEP_YELLOW;
+
+                case LIME:
+                    return LootTableList.ENTITIES_SHEEP_LIME;
+
+                case PINK:
+                    return LootTableList.ENTITIES_SHEEP_PINK;
+
+                case GRAY:
+                    return LootTableList.ENTITIES_SHEEP_GRAY;
+
+                case SILVER:
+                    return LootTableList.ENTITIES_SHEEP_SILVER;
+
+                case CYAN:
+                    return LootTableList.ENTITIES_SHEEP_CYAN;
+
+                case PURPLE:
+                    return LootTableList.ENTITIES_SHEEP_PURPLE;
+
+                case BLUE:
+                    return LootTableList.ENTITIES_SHEEP_BLUE;
+
+                case BROWN:
+                    return LootTableList.ENTITIES_SHEEP_BROWN;
+
+                case GREEN:
+                    return LootTableList.ENTITIES_SHEEP_GREEN;
+
+                case RED:
+                    return LootTableList.ENTITIES_SHEEP_RED;
+
+                case BLACK:
+                    return LootTableList.ENTITIES_SHEEP_BLACK;
             }
         }
-    }
-
-    protected Item getDropItem()
-    {
-        return Item.getItemFromBlock(Blocks.wool);
     }
 
     public void handleStatusUpdate(byte id)
@@ -155,7 +212,18 @@ public class EntitySheep extends EntityAnimal
 
     public float getHeadRotationPointY(float p_70894_1_)
     {
-        return this.sheepTimer <= 0 ? 0.0F : (this.sheepTimer >= 4 && this.sheepTimer <= 36 ? 1.0F : (this.sheepTimer < 4 ? ((float)this.sheepTimer - p_70894_1_) / 4.0F : -((float)(this.sheepTimer - 40) - p_70894_1_) / 4.0F));
+        if (this.sheepTimer <= 0)
+        {
+            return 0.0F;
+        }
+        else if (this.sheepTimer >= 4 && this.sheepTimer <= 36)
+        {
+            return 1.0F;
+        }
+        else
+        {
+            return this.sheepTimer < 4 ? ((float)this.sheepTimer - p_70894_1_) / 4.0F : -((float)(this.sheepTimer - 40) - p_70894_1_) / 4.0F;
+        }
     }
 
     public float getHeadRotationAngleX(float p_70890_1_)
@@ -167,87 +235,80 @@ public class EntitySheep extends EntityAnimal
         }
         else
         {
-            return this.sheepTimer > 0 ? ((float)Math.PI / 5F) : this.rotationPitch / (180F / (float)Math.PI);
+            return this.sheepTimer > 0 ? ((float)Math.PI / 5F) : this.rotationPitch * 0.017453292F;
         }
     }
 
-    /**
-     * Called when a player interacts with a mob. e.g. gets milk from a cow, gets into the saddle on a pig.
-     */
-    public boolean interact(EntityPlayer player)
+    public boolean processInteract(EntityPlayer player, EnumHand hand)
     {
-        ItemStack itemstack = player.inventory.getCurrentItem();
+        ItemStack itemstack = player.getHeldItem(hand);
 
-        if (itemstack != null && itemstack.getItem() == Items.shears && !this.getSheared() && !this.isChild())
+        if (itemstack.getItem() == Items.SHEARS && !this.getSheared() && !this.isChild())
         {
-            if (!this.worldObj.isRemote)
+            if (!this.world.isRemote)
             {
                 this.setSheared(true);
                 int i = 1 + this.rand.nextInt(3);
 
                 for (int j = 0; j < i; ++j)
                 {
-                    EntityItem entityitem = this.entityDropItem(new ItemStack(Item.getItemFromBlock(Blocks.wool), 1, this.getFleeceColor().getMetadata()), 1.0F);
-                    entityitem.motionY += (double)(this.rand.nextFloat() * 0.05F);
-                    entityitem.motionX += (double)((this.rand.nextFloat() - this.rand.nextFloat()) * 0.1F);
-                    entityitem.motionZ += (double)((this.rand.nextFloat() - this.rand.nextFloat()) * 0.1F);
+                    EntityItem entityitem = this.entityDropItem(new ItemStack(Item.getItemFromBlock(Blocks.WOOL), 1, this.getFleeceColor().getMetadata()), 1.0F);
+                    entityitem.motionY += this.rand.nextFloat() * 0.05F;
+                    entityitem.motionX += (this.rand.nextFloat() - this.rand.nextFloat()) * 0.1F;
+                    entityitem.motionZ += (this.rand.nextFloat() - this.rand.nextFloat()) * 0.1F;
                 }
             }
 
             itemstack.damageItem(1, player);
-            this.playSound("mob.sheep.shear", 1.0F, 1.0F);
+            this.playSound(SoundEvents.ENTITY_SHEEP_SHEAR, 1.0F, 1.0F);
         }
 
-        return super.interact(player);
+        return super.processInteract(player, hand);
+    }
+
+    public static void registerFixesSheep(DataFixer fixer)
+    {
+        EntityLiving.registerFixesMob(fixer, EntitySheep.class);
     }
 
     /**
      * (abstract) Protected helper method to write subclass entity data to NBT.
      */
-    public void writeEntityToNBT(NBTTagCompound tagCompound)
+    public void writeEntityToNBT(NBTTagCompound compound)
     {
-        super.writeEntityToNBT(tagCompound);
-        tagCompound.setBoolean("Sheared", this.getSheared());
-        tagCompound.setByte("Color", (byte)this.getFleeceColor().getMetadata());
+        super.writeEntityToNBT(compound);
+        compound.setBoolean("Sheared", this.getSheared());
+        compound.setByte("Color", (byte)this.getFleeceColor().getMetadata());
     }
 
     /**
      * (abstract) Protected helper method to read subclass entity data from NBT.
      */
-    public void readEntityFromNBT(NBTTagCompound tagCompund)
+    public void readEntityFromNBT(NBTTagCompound compound)
     {
-        super.readEntityFromNBT(tagCompund);
-        this.setSheared(tagCompund.getBoolean("Sheared"));
-        this.setFleeceColor(EnumDyeColor.byMetadata(tagCompund.getByte("Color")));
+        super.readEntityFromNBT(compound);
+        this.setSheared(compound.getBoolean("Sheared"));
+        this.setFleeceColor(EnumDyeColor.byMetadata(compound.getByte("Color")));
     }
 
-    /**
-     * Returns the sound this mob makes while it's alive.
-     */
-    protected String getLivingSound()
+    protected SoundEvent getAmbientSound()
     {
-        return "mob.sheep.say";
+        return SoundEvents.ENTITY_SHEEP_AMBIENT;
     }
 
-    /**
-     * Returns the sound this mob makes when it is hurt.
-     */
-    protected String getHurtSound()
+    protected SoundEvent getHurtSound(DamageSource p_184601_1_)
     {
-        return "mob.sheep.say";
+        return SoundEvents.ENTITY_SHEEP_HURT;
     }
 
-    /**
-     * Returns the sound this mob makes on death.
-     */
-    protected String getDeathSound()
+    protected SoundEvent getDeathSound()
     {
-        return "mob.sheep.say";
+        return SoundEvents.ENTITY_SHEEP_DEATH;
     }
 
     protected void playStepSound(BlockPos pos, Block blockIn)
     {
-        this.playSound("mob.sheep.step", 0.15F, 1.0F);
+        this.playSound(SoundEvents.ENTITY_SHEEP_STEP, 0.15F, 1.0F);
     }
 
     /**
@@ -255,7 +316,7 @@ public class EntitySheep extends EntityAnimal
      */
     public EnumDyeColor getFleeceColor()
     {
-        return EnumDyeColor.byMetadata(this.dataWatcher.getWatchableObjectByte(16) & 15);
+        return EnumDyeColor.byMetadata(this.dataManager.get(DYE_COLOR).byteValue() & 15);
     }
 
     /**
@@ -263,8 +324,8 @@ public class EntitySheep extends EntityAnimal
      */
     public void setFleeceColor(EnumDyeColor color)
     {
-        byte b0 = this.dataWatcher.getWatchableObjectByte(16);
-        this.dataWatcher.updateObject(16, Byte.valueOf((byte)(b0 & 240 | color.getMetadata() & 15)));
+        byte b0 = this.dataManager.get(DYE_COLOR).byteValue();
+        this.dataManager.set(DYE_COLOR, Byte.valueOf((byte)(b0 & 240 | color.getMetadata() & 15)));
     }
 
     /**
@@ -272,7 +333,7 @@ public class EntitySheep extends EntityAnimal
      */
     public boolean getSheared()
     {
-        return (this.dataWatcher.getWatchableObjectByte(16) & 16) != 0;
+        return (this.dataManager.get(DYE_COLOR).byteValue() & 16) != 0;
     }
 
     /**
@@ -280,15 +341,15 @@ public class EntitySheep extends EntityAnimal
      */
     public void setSheared(boolean sheared)
     {
-        byte b0 = this.dataWatcher.getWatchableObjectByte(16);
+        byte b0 = this.dataManager.get(DYE_COLOR).byteValue();
 
         if (sheared)
         {
-            this.dataWatcher.updateObject(16, Byte.valueOf((byte)(b0 | 16)));
+            this.dataManager.set(DYE_COLOR, Byte.valueOf((byte)(b0 | 16)));
         }
         else
         {
-            this.dataWatcher.updateObject(16, Byte.valueOf((byte)(b0 & -17)));
+            this.dataManager.set(DYE_COLOR, Byte.valueOf((byte)(b0 & -17)));
         }
     }
 
@@ -298,13 +359,33 @@ public class EntitySheep extends EntityAnimal
     public static EnumDyeColor getRandomSheepColor(Random random)
     {
         int i = random.nextInt(100);
-        return i < 5 ? EnumDyeColor.BLACK : (i < 10 ? EnumDyeColor.GRAY : (i < 15 ? EnumDyeColor.SILVER : (i < 18 ? EnumDyeColor.BROWN : (random.nextInt(500) == 0 ? EnumDyeColor.PINK : EnumDyeColor.WHITE))));
+
+        if (i < 5)
+        {
+            return EnumDyeColor.BLACK;
+        }
+        else if (i < 10)
+        {
+            return EnumDyeColor.GRAY;
+        }
+        else if (i < 15)
+        {
+            return EnumDyeColor.SILVER;
+        }
+        else if (i < 18)
+        {
+            return EnumDyeColor.BROWN;
+        }
+        else
+        {
+            return random.nextInt(500) == 0 ? EnumDyeColor.PINK : EnumDyeColor.WHITE;
+        }
     }
 
     public EntitySheep createChild(EntityAgeable ageable)
     {
         EntitySheep entitysheep = (EntitySheep)ageable;
-        EntitySheep entitysheep1 = new EntitySheep(this.worldObj);
+        EntitySheep entitysheep1 = new EntitySheep(this.world);
         entitysheep1.setFleeceColor(this.getDyeColorMixFromParents(this, entitysheep));
         return entitysheep1;
     }
@@ -323,14 +404,16 @@ public class EntitySheep extends EntityAnimal
         }
     }
 
+    @Nullable
+
     /**
      * Called only once on an entity when first time spawned, via egg, mob spawner, natural spawning etc, but not called
      * when entity is reloaded from nbt. Mainly used for initializing attributes and inventory
      */
-    public IEntityLivingData onInitialSpawn(DifficultyInstance difficulty, IEntityLivingData livingdata)
+    public IEntityLivingData onInitialSpawn(DifficultyInstance difficulty, @Nullable IEntityLivingData livingdata)
     {
         livingdata = super.onInitialSpawn(difficulty, livingdata);
-        this.setFleeceColor(getRandomSheepColor(this.worldObj.rand));
+        this.setFleeceColor(getRandomSheepColor(this.world.rand));
         return livingdata;
     }
 
@@ -343,16 +426,16 @@ public class EntitySheep extends EntityAnimal
         int j = ((EntitySheep)mother).getFleeceColor().getDyeDamage();
         this.inventoryCrafting.getStackInSlot(0).setItemDamage(i);
         this.inventoryCrafting.getStackInSlot(1).setItemDamage(j);
-        ItemStack itemstack = CraftingManager.getInstance().findMatchingRecipe(this.inventoryCrafting, ((EntitySheep)father).worldObj);
+        ItemStack itemstack = CraftingManager.findMatchingRecipe(this.inventoryCrafting, ((EntitySheep)father).world);
         int k;
 
-        if (itemstack != null && itemstack.getItem() == Items.dye)
+        if (itemstack.getItem() == Items.DYE)
         {
             k = itemstack.getMetadata();
         }
         else
         {
-            k = this.worldObj.rand.nextBoolean() ? i : j;
+            k = this.world.rand.nextBoolean() ? i : j;
         }
 
         return EnumDyeColor.byDyeDamage(k);
@@ -365,21 +448,11 @@ public class EntitySheep extends EntityAnimal
 
     static
     {
-        DYE_TO_RGB.put(EnumDyeColor.WHITE, new float[] {1.0F, 1.0F, 1.0F});
-        DYE_TO_RGB.put(EnumDyeColor.ORANGE, new float[] {0.85F, 0.5F, 0.2F});
-        DYE_TO_RGB.put(EnumDyeColor.MAGENTA, new float[] {0.7F, 0.3F, 0.85F});
-        DYE_TO_RGB.put(EnumDyeColor.LIGHT_BLUE, new float[] {0.4F, 0.6F, 0.85F});
-        DYE_TO_RGB.put(EnumDyeColor.YELLOW, new float[] {0.9F, 0.9F, 0.2F});
-        DYE_TO_RGB.put(EnumDyeColor.LIME, new float[] {0.5F, 0.8F, 0.1F});
-        DYE_TO_RGB.put(EnumDyeColor.PINK, new float[] {0.95F, 0.5F, 0.65F});
-        DYE_TO_RGB.put(EnumDyeColor.GRAY, new float[] {0.3F, 0.3F, 0.3F});
-        DYE_TO_RGB.put(EnumDyeColor.SILVER, new float[] {0.6F, 0.6F, 0.6F});
-        DYE_TO_RGB.put(EnumDyeColor.CYAN, new float[] {0.3F, 0.5F, 0.6F});
-        DYE_TO_RGB.put(EnumDyeColor.PURPLE, new float[] {0.5F, 0.25F, 0.7F});
-        DYE_TO_RGB.put(EnumDyeColor.BLUE, new float[] {0.2F, 0.3F, 0.7F});
-        DYE_TO_RGB.put(EnumDyeColor.BROWN, new float[] {0.4F, 0.3F, 0.2F});
-        DYE_TO_RGB.put(EnumDyeColor.GREEN, new float[] {0.4F, 0.5F, 0.2F});
-        DYE_TO_RGB.put(EnumDyeColor.RED, new float[] {0.6F, 0.2F, 0.2F});
-        DYE_TO_RGB.put(EnumDyeColor.BLACK, new float[] {0.1F, 0.1F, 0.1F});
+        for (EnumDyeColor enumdyecolor : EnumDyeColor.values())
+        {
+            DYE_TO_RGB.put(enumdyecolor, func_192020_c(enumdyecolor));
+        }
+
+        DYE_TO_RGB.put(EnumDyeColor.WHITE, new float[] {0.9019608F, 0.9019608F, 0.9019608F});
     }
 }
