@@ -7,28 +7,29 @@ import java.util.Map;
 import java.util.Random;
 import java.util.Map.Entry;
 import net.minecraft.entity.monster.EntityWitch;
-import net.minecraft.util.BlockPos;
-import net.minecraft.util.MathHelper;
+import net.minecraft.init.Biomes;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.MathHelper;
 import net.minecraft.world.World;
-import net.minecraft.world.biome.BiomeGenBase;
+import net.minecraft.world.biome.Biome;
 
 public class MapGenScatteredFeature extends MapGenStructure
 {
-    private static final List<BiomeGenBase> biomelist = Arrays.<BiomeGenBase>asList(new BiomeGenBase[] {BiomeGenBase.desert, BiomeGenBase.desertHills, BiomeGenBase.jungle, BiomeGenBase.jungleHills, BiomeGenBase.swampland});
-    private List<BiomeGenBase.SpawnListEntry> scatteredFeatureSpawnList;
+    private static final List<Biome> BIOMELIST = Arrays.asList(Biomes.DESERT, Biomes.DESERT_HILLS, Biomes.JUNGLE, Biomes.JUNGLE_HILLS, Biomes.SWAMPLAND, Biomes.ICE_PLAINS, Biomes.COLD_TAIGA);
+    private final List<Biome.SpawnListEntry> scatteredFeatureSpawnList;
 
     /** the maximum distance between scattered features */
     private int maxDistanceBetweenScatteredFeatures;
 
     /** the minimum distance between scattered features */
-    private int minDistanceBetweenScatteredFeatures;
+    private final int minDistanceBetweenScatteredFeatures;
 
     public MapGenScatteredFeature()
     {
-        this.scatteredFeatureSpawnList = Lists.<BiomeGenBase.SpawnListEntry>newArrayList();
+        this.scatteredFeatureSpawnList = Lists.newArrayList();
         this.maxDistanceBetweenScatteredFeatures = 32;
         this.minDistanceBetweenScatteredFeatures = 8;
-        this.scatteredFeatureSpawnList.add(new BiomeGenBase.SpawnListEntry(EntityWitch.class, 1, 1, 1));
+        this.scatteredFeatureSpawnList.add(new Biome.SpawnListEntry(EntityWitch.class, 1, 1, 1));
     }
 
     public MapGenScatteredFeature(Map<String, String> p_i2061_1_)
@@ -37,9 +38,9 @@ public class MapGenScatteredFeature extends MapGenStructure
 
         for (Entry<String, String> entry : p_i2061_1_.entrySet())
         {
-            if (((String)entry.getKey()).equals("distance"))
+            if (entry.getKey().equals("distance"))
             {
-                this.maxDistanceBetweenScatteredFeatures = MathHelper.parseIntWithDefaultAndMax((String)entry.getValue(), this.maxDistanceBetweenScatteredFeatures, this.minDistanceBetweenScatteredFeatures + 1);
+                this.maxDistanceBetweenScatteredFeatures = MathHelper.getInt(entry.getValue(), this.maxDistanceBetweenScatteredFeatures, 9);
             }
         }
     }
@@ -69,21 +70,21 @@ public class MapGenScatteredFeature extends MapGenStructure
         Random random = this.worldObj.setRandomSeed(k, l, 14357617);
         k = k * this.maxDistanceBetweenScatteredFeatures;
         l = l * this.maxDistanceBetweenScatteredFeatures;
-        k = k + random.nextInt(this.maxDistanceBetweenScatteredFeatures - this.minDistanceBetweenScatteredFeatures);
-        l = l + random.nextInt(this.maxDistanceBetweenScatteredFeatures - this.minDistanceBetweenScatteredFeatures);
+        k = k + random.nextInt(this.maxDistanceBetweenScatteredFeatures - 8);
+        l = l + random.nextInt(this.maxDistanceBetweenScatteredFeatures - 8);
 
         if (i == k && j == l)
         {
-            BiomeGenBase biomegenbase = this.worldObj.getWorldChunkManager().getBiomeGenerator(new BlockPos(i * 16 + 8, 0, j * 16 + 8));
+            Biome biome = this.worldObj.getBiomeProvider().getBiome(new BlockPos(i * 16 + 8, 0, j * 16 + 8));
 
-            if (biomegenbase == null)
+            if (biome == null)
             {
                 return false;
             }
 
-            for (BiomeGenBase biomegenbase1 : biomelist)
+            for (Biome biome1 : BIOMELIST)
             {
-                if (biomegenbase == biomegenbase1)
+                if (biome == biome1)
                 {
                     return true;
                 }
@@ -93,18 +94,24 @@ public class MapGenScatteredFeature extends MapGenStructure
         return false;
     }
 
+    public BlockPos getClosestStrongholdPos(World worldIn, BlockPos pos, boolean p_180706_3_)
+    {
+        this.worldObj = worldIn;
+        return func_191069_a(worldIn, this, pos, this.maxDistanceBetweenScatteredFeatures, 8, 14357617, false, 100, p_180706_3_);
+    }
+
     protected StructureStart getStructureStart(int chunkX, int chunkZ)
     {
         return new MapGenScatteredFeature.Start(this.worldObj, this.rand, chunkX, chunkZ);
     }
 
-    public boolean func_175798_a(BlockPos p_175798_1_)
+    public boolean isSwampHut(BlockPos p_175798_1_)
     {
-        StructureStart structurestart = this.func_175797_c(p_175798_1_);
+        StructureStart structurestart = this.getStructureAt(p_175798_1_);
 
         if (structurestart != null && structurestart instanceof MapGenScatteredFeature.Start && !structurestart.components.isEmpty())
         {
-            StructureComponent structurecomponent = (StructureComponent)structurestart.components.getFirst();
+            StructureComponent structurecomponent = structurestart.components.get(0);
             return structurecomponent instanceof ComponentScatteredFeaturePieces.SwampHut;
         }
         else
@@ -113,7 +120,7 @@ public class MapGenScatteredFeature extends MapGenStructure
         }
     }
 
-    public List<BiomeGenBase.SpawnListEntry> getScatteredFeatureSpawnList()
+    public List<Biome.SpawnListEntry> getScatteredFeatureSpawnList()
     {
         return this.scatteredFeatureSpawnList;
     }
@@ -124,27 +131,39 @@ public class MapGenScatteredFeature extends MapGenStructure
         {
         }
 
-        public Start(World worldIn, Random p_i2060_2_, int p_i2060_3_, int p_i2060_4_)
+        public Start(World worldIn, Random random, int chunkX, int chunkZ)
         {
-            super(p_i2060_3_, p_i2060_4_);
-            BiomeGenBase biomegenbase = worldIn.getBiomeGenForCoords(new BlockPos(p_i2060_3_ * 16 + 8, 0, p_i2060_4_ * 16 + 8));
+            this(worldIn, random, chunkX, chunkZ, worldIn.getBiome(new BlockPos(chunkX * 16 + 8, 0, chunkZ * 16 + 8)));
+        }
 
-            if (biomegenbase != BiomeGenBase.jungle && biomegenbase != BiomeGenBase.jungleHills)
+        public Start(World worldIn, Random random, int chunkX, int chunkZ, Biome biomeIn)
+        {
+            super(chunkX, chunkZ);
+
+            if (biomeIn != Biomes.JUNGLE && biomeIn != Biomes.JUNGLE_HILLS)
             {
-                if (biomegenbase == BiomeGenBase.swampland)
+                if (biomeIn == Biomes.SWAMPLAND)
                 {
-                    ComponentScatteredFeaturePieces.SwampHut componentscatteredfeaturepieces$swamphut = new ComponentScatteredFeaturePieces.SwampHut(p_i2060_2_, p_i2060_3_ * 16, p_i2060_4_ * 16);
+                    ComponentScatteredFeaturePieces.SwampHut componentscatteredfeaturepieces$swamphut = new ComponentScatteredFeaturePieces.SwampHut(random, chunkX * 16, chunkZ * 16);
                     this.components.add(componentscatteredfeaturepieces$swamphut);
                 }
-                else if (biomegenbase == BiomeGenBase.desert || biomegenbase == BiomeGenBase.desertHills)
+                else if (biomeIn != Biomes.DESERT && biomeIn != Biomes.DESERT_HILLS)
                 {
-                    ComponentScatteredFeaturePieces.DesertPyramid componentscatteredfeaturepieces$desertpyramid = new ComponentScatteredFeaturePieces.DesertPyramid(p_i2060_2_, p_i2060_3_ * 16, p_i2060_4_ * 16);
+                    if (biomeIn == Biomes.ICE_PLAINS || biomeIn == Biomes.COLD_TAIGA)
+                    {
+                        ComponentScatteredFeaturePieces.Igloo componentscatteredfeaturepieces$igloo = new ComponentScatteredFeaturePieces.Igloo(random, chunkX * 16, chunkZ * 16);
+                        this.components.add(componentscatteredfeaturepieces$igloo);
+                    }
+                }
+                else
+                {
+                    ComponentScatteredFeaturePieces.DesertPyramid componentscatteredfeaturepieces$desertpyramid = new ComponentScatteredFeaturePieces.DesertPyramid(random, chunkX * 16, chunkZ * 16);
                     this.components.add(componentscatteredfeaturepieces$desertpyramid);
                 }
             }
             else
             {
-                ComponentScatteredFeaturePieces.JunglePyramid componentscatteredfeaturepieces$junglepyramid = new ComponentScatteredFeaturePieces.JunglePyramid(p_i2060_2_, p_i2060_3_ * 16, p_i2060_4_ * 16);
+                ComponentScatteredFeaturePieces.JunglePyramid componentscatteredfeaturepieces$junglepyramid = new ComponentScatteredFeaturePieces.JunglePyramid(random, chunkX * 16, chunkZ * 16);
                 this.components.add(componentscatteredfeaturepieces$junglepyramid);
             }
 
